@@ -1,0 +1,1 @@
+Are Sou Yure (S/n)? [S] $$Are Sou Yure (S/n)? [S] 
