@@ -1,3 +1,5 @@
+TODO: look what really changed from ssed 3.62!
+
 Sed 3.62 (aligned with GNU sed CVS at 2005-02-10)
   
 * added a note to BUGS and the manual about changed interpretation
@@ -13,6 +15,8 @@ Sed 3.62 (aligned with GNU sed CVS at 2005-02-10)
 
 * fix parsing of a negative character class not including a closed bracket,
   like [^]] or [^]a-z].
+
+* fix parsing of [ inside an y command, like y/[/A/.
 
 * output the result of commands a, r, R when a q command is found.
 
