@@ -1,3 +1,7 @@
+2006-02-03  Paolo Bonzini  <bonzini@gnu.org>
+
+        * sed/compile.c (compile_program) <case 'y'>: Pass false to match_slash.
+
 2005-08-30  Paolo Bonzini  <bonzini@gnu.org>
 
 	* sed/execute.c (reset_addresses): Never activate ADDR_IS_NUM_MOD
